--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "angular-route": "^1.6.5",
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
+    "forever": "^0.15.3",
     "request": "^2.81.0"
   }
 }
